# cadsus-client

./: Cargo.toml  README.md
src/client/: mod.rs  osb.rs
src/client/pdq/: mod.rs  request.rs  xml.rs
src/client/pdq/data/: mod.rs
src/client/pdq/data/dto/: certidao.rs  cidadao.rs  cns.rs  contato.rs  endereco.rs  mod.rs  nacionalidade.rs  raca.rs  sexo.rs  titulo_eleitor.rs
src/client/pdq/data/model/: address.rs  administrative_gender_code.rs  birth_place.rs  birth_time.rs  deceased.rs  id.rs  mod.rs  name.rs  patient.rs  patient_person.rs  race_code.rs  realm_code.rs  registration_event.rs  relationship.rs  subject.rs  subject_root.rs  telecom.rs
src/templates/: PRPA_IN201305UV02.xml
